Some part of the main text was written.

--- a/Approximate-Sequencing-of-Virtual-Reels-with-Genetic-Algorithms/paper.tex
+++ b/Approximate-Sequencing-of-Virtual-Reels-with-Genetic-Algorithms/paper.tex
@@ -57,15 +57,29 @@ Slot machines are gambling games organized as spinning reels with drawn symbols 
 
 In almost all cases the gambling games are mathematically unfair. It means that in long term players are losing against the game operator. The rate of this loss is measured with return to player (RTP) percentage. In many countries where gambling is legalized the RTP is between 90\% and 98\%. Of course, there are exceptions like Nevada where RTP can be much lower. The RTP has a statistical meaning. If the player bets 100 dollars on a game with 95\% RTP it means that statistically in a single run he/she will get back 95 dollars. The RTP of the game comes directly from the order of the symbols in the virtual reels. From a mathematical point of view, there is no reason the discrete distribution of the symbols on the reels to be unknown for the players. As it is very well known that gambling games are mathematically unfair and legal regulators are controlling strictly all gambling games, there will not be an advantage of the player if he/she knows what is the content of the virtual reels. The case is similar to the roulette where the order of the numbers and their colors are perfectly known to the players. However, slot machines are covered with additional mystery by the fact that virtual reels are not published in the game rules. If someone wants to estimate game's RTP without access to the original game source code there is no other way except reels sequences reconstruction from the observed chunks \cite{Vaidyanathan-Phoong-1995}. Such a sequence reconstruction task can be time-consuming because of its high-combinatorial nature \cite{Lewis-1998}.
 
-Generally, in most of the sequencing problems, the final goal is an exact reconstruction of the analyzed sequence \cite{Parsons-Johnson-1997}. In the case of the virtual slot machines reels \cite{Tomov-Zankinski-Balabanov-2017}, the exact reconstruction is not mandatory. It is enough reels to be reconstructed in such a manner that the subjective feeling of the player is identical for the original and the reconstructed reels. This research proposes approximate slot machine reels reconstruction with genetic algorithms. The optimality of the solutions provided by the genetic algorithm is estimated by Euclidean distance between the chunks of the candidate solution and the chunks from the original sequences. The final goal of this sequencing is reconstructed virtual reels with identical properties as the original even that there will not be an exact match between the reconstructed and the original sequences. 
+Generally, in most of the sequencing problems, the final goal is an exact reconstruction of the analyzed sequence \cite{Parsons-Johnson-1997}. In the case of the virtual slot machines reels \cite{Tomov-Zankinski-Balabanov-2017-1}, the exact reconstruction is not mandatory. It is enough reels to be reconstructed in such a manner that the subjective feeling of the player is identical for the original and the reconstructed reels. This research proposes approximate slot machine reels reconstruction with genetic algorithms. The optimality of the solutions provided by the genetic algorithm is estimated by Euclidean distance between the chunks of the candidate solution and the chunks from the original sequences. The final goal of this sequencing is reconstructed virtual reels with identical properties as the original even that there will not be an exact match between the reconstructed and the original sequences. 
 
-After the introductory part paper continues as follows: The second section describes the mechanism of genetic algorithm usage in sequencing problems. The third section presents the experiments done and the results achieved. The last section concludes and some directions of further works are appointed. 
+After the introductory part this paper continues as follows: The second section describes the mechanism of genetic algorithm usage in sequencing problems. The third section presents the experiments done and the results achieved. The last section concludes and some directions of further works are appointed. 
 
 \section{Genetic Algorithms for Sequencing}
+
+Genetic algorithms are well known for the last three decades tool for global meta-heuristic optimization \cite{Balabanov-Ivanov-Ketipov-2020}. Genetic algorithms are applied to problems with higher dimensional solutions spaces with much greatest success than the exact numerical methods \cite{Tomov-Zankinski-Balabanov-2019}. The optimization process relays on a set of candidate solutions \cite{Balabanov-Sevova-Kolev-2019}. This set is called population and the candidate solutions are called individuals or chromosomes. In most of the cases, the initial population is randomly generated \cite{Balabanov-Barova-Keremedchiev-2016}, but starting with a set of known in advance suboptimal solutions is also possible. The optimization procedures in genetic algorithms are inspired from the ideas in natural evolution. At each epoch of artificial evolution, the population produces a new generation. The new generation is formed after the application of three basic recombination operators - selection, crossover, and mutation \cite{Balabanov-Zankinski-Barova-2016}. The selection operator is the base of genetic algorithm optimization convergence. The empirical expectation is that when better-fitted chromosomes are selected to produce offspring the offspring would be even better \cite{Balabanov-Zankinski-Dobrinkova-2011}. The crossover operator exchanges parts of two or more selected parents when the mutation operator does a random change in a single value of the chromosome produced after the crossover \cite{Balabanov-Zankinski-Shumanov-2015}. The best offspring individuals replace part of the population and this is the way in which the new generation is created. If elitism rule is applied a small amount of the best-found individuals can not be replaced and they do survive until the end of the optimization process. 
+
+Sequencing of slot machine virtual reels can be done with the exact reconstruction of the reels \cite{Tomov-Zankinski-Balabanov-2017-2}, but this is not needed because it is enough to achieve identical behavior of the game with the reconstructed reels in front of the players. When approximated reconstruction is applicable the process starts with collection of virtual reel chunks samples. In most cases, the length of the reel will not be known in advance. In such cases, statistical analysis should be done to estimate the number of samples that are needed for as better reconstruction as possible. Histogram of the chunks can reveal the appearance frequency of each observed chunk \cite{Balabanov-2020}.
+
+Chromosomes are encoded as candidate sequences formed from the set of the possible game symbols in the particular reel. From the candidate sequence, chunk samples are taken. The number of the samples taken is the same as the number taken from the original sequence. All estimations of the candidate solution quality are done according to these taken samples. 
+
+Estimation of the fitness value is done by calculation of average Euclidean distance for a sorted set of chunks in the candidate and the original as pairs. Sorting is done in order for candidate chunks to correspond to original chunks when Euclidean distance is calculated between the pairs. Original chunks are sorted only once when they are collected as samples. The candidate chunks are sorted each time when the candidate sequence is changed (crossover and/or mutation). All distances between chunk pairs are summed and divided by chunks number in order for the average value to be offered as chromosome fitness. 
+
+The fitness value estimation is done from the list of chunks, but crossover and mutation are done over candidate sequences. Such a change in the candidate sequences leads to an immediate recalculation of chunks samples. Modified uniform crossover is used with the application of normal distribution (mean 50\% and a standard deviation of 20\%) for the rate of participation of the two parents. It means that one of the parents has more influence in forming the offspring. Because the length of the original sequence is generally unknown the size of the offspring sequence length should be estimated during crossover process. As a lower bound of candidate sequence length, the number of unique symbols in the virtual reels is taken. As an upper bound of candidate sequence length, the total length of all chunks taken together is taken. Such estimation of the candidate sequence length gives chance all symbols to participate (lower bound) and all chunks to be used in a single sequence (upper bound). 
 
 \section{Experiments and Results}
 
 \section{Conclusion}
+
+The presented research is an approximate sequencing of slot machine gambling games virtual reels with genetic algorithms. The optimization process in reconstruction has as criteria of optimality the distance between the observed chunks from the candidate solution and the observed chunks from the original virtual reels. Results from the experiments clearly show that the proposed approach for approximate reconstruction can be efficiently used in the industrial production of slot machine gambling games. The main application is reverse engineering of the virtual reels. Such reverse engineering could be very useful in quality control and operational control of the games. 
+
+As for directions of further work, it will be an interesting discrete differential evolution to be used instead of genetic algorithms. In fitness estimation, Euclidean distance could be replaced with some other distance which can enforce faster optimization convergence. High-dimensional combinatorial optimization problems are usually time-consuming. In such situations, supercomputer systems as AVITOHOL \cite{Tashev-Tasheva-Petrov-2019} can be involved. A parallel implementation of population-based meta-heuristics is possible because of heir well known high degree of possible parallelism.
 
 \section*{Acknowledgments}
 
@@ -85,7 +99,27 @@ This research is funded by Velbazhd Software LLC and it is partially supported b
 
 \bibitem{Parsons-Johnson-1997} Parsons, R., Johnson, M.: A Case Study in Experimental Design Applied to Genetic Algorithms with Applications to DNA Sequence Assembly, American Journal of Mathematical and Management Sciences, vol. 17, no. 3-4, 369-396, (1997).
 
-\bibitem{Tomov-Zankinski-Balabanov-2017} Tomov, P., Zankinski, I., Balabanov, T.: Slot Machine Reels Reconstruction with Monte-Carlo Search, Proceedings of International Scientific Conference UniTech, vol. 2, 384-387, (2017).
+\bibitem{Tomov-Zankinski-Balabanov-2017-1} Tomov, P., Zankinski, I., Balabanov, T.: Slot Machine Reels Reconstruction with Monte-Carlo Search, Proceedings of International Scientific Conference UniTech, vol. 2, 384-387, (2017).
+
+\bibitem{Balabanov-Ivanov-Ketipov-2020} Balabanov, T, Ivanov, S. Ketipov, R.: Solving Combinatorial Puzzles with Parallel Evolutionary Algorithms, Proceedings of International Conference on Large-Scale Scientific Computing, Lecture Notes in Computer Science, vol. 11958, 493-500, (2020).
+
+\bibitem{Tomov-Zankinski-Balabanov-2019} Tomov, P., Zankinski, I., Balabanov, T.: Genetic Algorithm Selection Operator Based on Recursion and Brute-Force, Abstracts of Annual Meeting of the Bulgarian Section of SIAM, Fastumprint, 93-93, (2019).
+
+\bibitem{Balabanov-Sevova-Kolev-2019} Balabanov, T., Sevova, J, Kolev, K.: Optimization of String Rewriting Operations for 3D Fractal Generation with Genetic Algorithms, Proceedings of International Conference on Numerical Methods and Applications, Lecture Notes in Computer Science, vol. 11189, 48-54, (2019).
+
+\bibitem{Balabanov-Barova-Keremedchiev-2016} Balabanov, T, Barova, M., Keremedchiev, D.: Image Construction with 2D Ellipses by Genetic Algorithms Optimization, Abstracts of Annual Meeting of the Bulgarian Section of SIAM, Fastumprint, 10-11, (2016).
+
+\bibitem{Balabanov-Zankinski-Barova-2016} Balabanov, T, Zankinski, I., Barova, M.: Strategy for Individuals Distribution by Incident Nodes Participation in Star Topology of Distributed Evolutionary Algorithms, Cybernetics and Information Technologies, vol. 16, no. 1, 80-88, (2016).
+
+\bibitem{Balabanov-Zankinski-Dobrinkova-2011} Balabanov, T, Zankinski, I., Dobrinkova, N.: Time Series Prediction by Artificial Neural Networks and Differential Evolution in Distributed Environment, Proceedings of International Conference on Large-Scale Scientific Computing, Lecture Notes in Computer Science, vol. 7116, 198-205, (2011).
+
+\bibitem{Balabanov-Zankinski-Shumanov-2015} Balabanov, T, Zankinski, I., Shumanov, B.: Slot Machine RTP Optimization and Symbols Wins Equalization with Discrete Differential Evolution, Proceedings of International Conference on Large-Scale Scientific Computing, Lecture Notes in Computer Science, vol. 9374, 210-217, (2015).
+
+\bibitem{Tomov-Zankinski-Balabanov-2017-2} Tomov, P., Zankinski, I., Balabanov, T: Slot Machine Reels Reconstruction with Genetic Algorithms, Abstracts of Annual Meeting of the Bulgarian Section of SIAM, Fastumprint, 102-103, (2017).
+
+\bibitem{Balabanov-2020} Balabanov, T.: Approximated Sequences Reconstruction with Genetic Algorithms, https://github.com/TodorBalabanov/Approximated-Sequences-Reconstruction-with-Genetic-Algorithms
+
+\bibitem{Tashev-Tasheva-Petrov-2019} Tashev, T., Tasheva, R., Petrov, P.: Determination of the Computer Modelling Precision for Throughput of Switch Node with LPF-algorithm, Proceedings of  International Conference on Computer Systems and Technologies, ACM, 141-145, (2019).
 
 \end{thebibliography}
 
