The main text of the paper was created.

--- a/Approximate-Sequencing-of-Virtual-Reels-with-Genetic-Algorithms/paper.tex
+++ b/Approximate-Sequencing-of-Virtual-Reels-with-Genetic-Algorithms/paper.tex
@@ -71,7 +71,9 @@ Chromosomes are encoded as candidate sequences formed from the set of the possib
 
 Estimation of the fitness value is done by calculation of average Euclidean distance for a sorted set of chunks in the candidate and the original as pairs. Sorting is done in order for candidate chunks to correspond to original chunks when Euclidean distance is calculated between the pairs. Original chunks are sorted only once when they are collected as samples. The candidate chunks are sorted each time when the candidate sequence is changed (crossover and/or mutation). All distances between chunk pairs are summed and divided by chunks number in order for the average value to be offered as chromosome fitness. 
 
-The fitness value estimation is done from the list of chunks, but crossover and mutation are done over candidate sequences. Such a change in the candidate sequences leads to an immediate recalculation of chunks samples. Modified uniform crossover is used with the application of normal distribution (mean 50\% and a standard deviation of 20\%) for the rate of participation of the two parents. It means that one of the parents has more influence in forming the offspring. Because the length of the original sequence is generally unknown the size of the offspring sequence length should be estimated during crossover process. As a lower bound of candidate sequence length, the number of unique symbols in the virtual reels is taken. As an upper bound of candidate sequence length, the total length of all chunks taken together is taken. Such estimation of the candidate sequence length gives chance all symbols to participate (lower bound) and all chunks to be used in a single sequence (upper bound). 
+The fitness value estimation is done from the list of chunks, but crossover and mutation are done over candidate sequences. Such a change in the candidate sequences leads to an immediate recalculation of chunks samples. Modified uniform crossover is used with the application of normal distribution (mean 50\% and a standard deviation of 20\%) for the rate of participation of the two parents. It means that one of the parents has more influence in forming the offspring. Because the length of the original sequence is generally unknown the size of the offspring sequence length should be estimated during crossover process. As a lower bound of candidate sequence length, the number of unique symbols in the virtual reels is taken. As an upper bound of candidate sequence length, the total length of all chunks taken together is taken. Such estimation of the candidate sequence length gives chance all symbols to participate (lower bound) and all chunks to be used in a single sequence (upper bound). Such an estimation of the length gives chance to the genetic algorithm to optimize this parameter too. The mutation is done by random replacement of a single value in the candidate sequence. The random value is taken from the chunks of the original sequence. 
+
+For the selection, three different chromosomes are selected randomly. Two of the three with better fitness are selected for parents. The third one is selected to be removed from the population and the newly generated offspring to take its place. This replacement is done only if the new offspring is better than the old one. With such a selection operator, the elitism rule is indirectly applied.
 
 \section{Experiments and Results}
 
